--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install
-            - run: npm test
-            - run: npm lint
+            - run: yarn
+            - run: yarn test
+            - run: yarn lint
 workflows:
     build-and-test:
       jobs:
