--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  install:
     executor:
       name: node/default
     steps:
@@ -10,9 +10,43 @@ jobs:
       - node/with-cache:
           steps:
             - run: yarn
+  
+  test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
             - run: yarn test
+
+  lint:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
             - run: yarn lint
+  
+  publish:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm publish
+
 workflows:
-    build-and-test:
+    validation:
       jobs:
-        - build-and-test
+        - install
+        - test
+        - lint
+    publish:
+      jobs:
+        - publish:
+            filters:
+              branches:
+                only: master
