--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-triggers",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "serverless-triggers CLI",
   "author": {
     "name": "Robson Alves",
@@ -33,9 +33,9 @@
     "gluegun": "latest"
   },
   "devDependencies": {
-    "standard": "^12.0.1",
+    "jest": "^24.1.0",
     "prettier": "^1.12.1",
-    "jest": "^24.1.0"
+    "standard": "^12.0.1"
   },
   "jest": {
     "testEnvironment": "node"
