--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "jest",
     "watch": "jest --watch",
     "snapupdate": "jest --updateSnapshot",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "changelog": "auto-changelog"
   },
   "files": [
     "src",
@@ -33,6 +34,7 @@
     "gluegun": "latest"
   },
   "devDependencies": {
+    "auto-changelog": "^1.16.3",
     "jest": "^24.1.0",
     "prettier": "^1.12.1",
     "standard": "^12.0.1"
