--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
                 command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
             - run:
                 name: Publish package
-                command: npm publish --access public --otp $npm_OPT
+                command: npm publish --access public
 
 workflows:
   validation:
