--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "gluegun": "latest"
+    "gluegun": "^4.3.1"
   },
   "devDependencies": {
     "jest": "^24.1.0",
